src/sass/layout/_details.scss
.details {
	&__pages {
		padding: 50px 0;
	}
	&__container {
		display: flex;
		gap: 75px;
		justify-content: center;
		border: 2px solid #000;
		border-radius: 25px;
		color: #565656;
		padding: 15px;

		img {
			height: 360px;
		}
	}
}

.inf__container {
	display: flex;
	flex-direction: column;
	gap: 65px;

	p {
		font-size: clamp(0.625rem, 0.4398rem + 0.9259vw, 1.25rem);
	}

	max-width: 647px;
}

.details__pages-back {
	position: absolute;
	width: 40px;
	height: 40px;
	border: none;
	border-radius: 10px;
	top: 8%;
	left: 4%;

	img {
		width: 100%;
		height: 100%;
	}
}

@media (max-width: 753px) {
	.details {
		&__container {
			flex-direction: column;
			align-items: center;
		}
	}
}

@media (max-width: 375px) {
	.details {
		&__container {
			img {
				width: 220px;
				height: 220px;
			}
		}
	}
}

